sandbox/output
OneHundredDoors.java:6: error: cannot find symbol
        List<Door> doorStates = new ArrayList<Door>(Arrays.asList(
        ^
  symbol:   class List
  location: class OneHundredDoors
OneHundredDoors.java:6: error: cannot find symbol
        List<Door> doorStates = new ArrayList<Door>(Arrays.asList(
                                    ^
  symbol:   class ArrayList
  location: class OneHundredDoors
OneHundredDoors.java:6: error: cannot find symbol
        List<Door> doorStates = new ArrayList<Door>(Arrays.asList(
                                                    ^
  symbol:   variable Arrays
  location: class OneHundredDoors
3 errors
